--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
 
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src=" https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
 
   <div id="root"></div>
