--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>AI Copywriting tool for web | Ellipsis-AI</title>
+  <!-- Autopilot ellipsisai capture code -->
+  <script>
+    window.ap3c = window.ap3c || {};
+    var ap3c = window.ap3c;
+    ap3c.cmd = ap3c.cmd || [];
+    ap3c.cmd.push(function () {
+      ap3c.init('YRyvNQF91RvPF9NqZWxsaXBzaXNhaQ', 'https://capture-api.autopilotapp.com/');
+      ap3c.track({ v: 0 });
+    });
+    var s, t; s = document.createElement('script'); s.type = 'text/javascript'; s.src = "https://s.autopilotapp.com/app.js";
+    t = document.getElementsByTagName('script')[0]; t.parentNode.insertBefore(s, t);
+  </script>
 </head>
 
 <body>
